# Config-NeoVim

./: .gitignore  AGENT.md  README.md  lazy-lock.json  lazyvim.json  pyproject.toml
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
lua/plugins/: cpp.lua  example.lua  java.lua  noice.lua
scripts/: test.sh
templates/: cpp.cpp
tests/lua/: minimal_init.lua
tests/lua/spec/: autocmd_cpp_template_spec.lua  cpp_plugin_spec.lua  ftplugin_cpp_spec.lua  java_plugin_spec.lua  keymaps_spec.lua  noice_spec.lua
tests/pytest/: conftest.py  test_headless_smoke.py  test_lock_and_imports.py  test_lua_file_contracts.py  test_requirements.py  test_treesitter_java_gate.py
